--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -31,3 +31,14 @@
     }
   }
 }
+
+.article_link{
+  border-bottom: 1px solid gray;
+  cursor:pointer;
+  text-transform: none
+}
+
+#recommended{
+  border:1px solid black;
+  padding:5px
+}
