--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,9 @@
         {% if site.owner.disqus-shortname and page.comments or site.comments %}<span class="entry-comments"><i class="fa fa-comment-o"></i> <a href="#disqus_thread">Comment</a></span>{% endif %}
         {% if page.share %}{% include social-share.html %}{% endif %}
         {% if page.ads == true %}{% include ad-sidebar.html %}<!-- /.google-ads -->{% endif %}
+        <div id="recommended">
+          <div class="article_link"><strong>You might also like:</strong></div>
+        </div>
       </footer>
       <div class="entry-content">
         {{ content }}
@@ -67,6 +70,52 @@
 </div><!-- /.footer-wrapper -->
 
 {% include scripts.html %}
+<script src="https://ds.microsoft.com/api/v2/jdhblog/rank/myposts?details=2" async></script> 
+<script>
+  
+        function callback(json) {
+            $.map(json.ranking, function (element, index) {
+                //Custom rendering function given content info
+                var title = $(".entry-title").text()
+                if(element.details[1].title != title && index<5){
+                if(element.details[1]!=undefined){
+                render({
+                    title: element.details[1].title,
+                    id:index,
+                    onClick: element.id != json.rewardAction ? function () {
+                            $.ajax({
+                                type: "POST",
+                                url: '//ds.microsoft.com/api/v2/jdhblog/reward/' + json.eventId,
+                                contentType: "application/json",
+                                data: 0
+                            });
+                            console.log("success");
+                            location = element.id;
+                        } :
+                        function () {
+                            $.ajax({
+                                type: "POST",
+                                url: '//ds.microsoft.com/api/v2/jdhblog/reward/' + json.eventId,
+                                contentType: "application/json",
+                                data: 1
+                            });
+                            console.log("success");
+                            location = element.id;
+                        }
+                });}}
+            });
+        }
 
+        function render(article){
+          $('#recommended').append(
+            "<div class='article_link' id='article_link"
+            +article.id
+            +"'>"
+            + article.title
+            +"</div");
+          $("#article_link" + article.id).click(article.onClick);
+        }
+
+</script>
 </body>
 </html>
