added blockchain post

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -79,6 +79,16 @@ span + .entry-title {
 	margin-top: 0;
 }
 
+.post-image{
+	text-align:center;
+}
+
+.image-caption {
+	text-align: center;
+	font-size: .8rem;
+	color: light-grey;
+  }
+
 .entry-title {
 	font-family: $alt-font;
 	font-style: italic;
