--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -156,7 +156,7 @@ span + .entry-title {
 
 	@include media($large) {
 		display: block;
-		width: 150px;
+		/*width: 150px;*/
 		height: 150px;
 		margin-bottom: 10px;
 		@include rounded(150px);
