fixed nft blog post

--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -2,9 +2,9 @@
   <a href="https://twitter.com/intent/tweet?hashtags={{ page.tags | join: ',' | remove: ' ' }}&amp;text={{ page.title | escape | replace:' ','%20' }}&amp;url={{ site.url }}{{ page.url }}{% if author.twitter %}&amp;via={{ author.twitter }}{% endif %}" title="Share on Twitter" itemprop="Twitter"><i class="fa fa-twitter-square"></i>Tweet</a>
 </span>
 <span class="social-share-facebook">
-  <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Facebook" itemprop="Facebook"><i class="fa fa-facebook-square"></i>Share to Facebook</a>
+  <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Facebook" itemprop="Facebook"><i class="fa fa-facebook-square"></i>Facebook</a>
 </span>
 <span class="social-share-googleplus">
-  <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url }}" title="LinkedIn" itemprop="GooglePlus"><i class="fa fa-linkedin"></i>Share to LinkedIn</a>
+  <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url }}" title="LinkedIn" itemprop="GooglePlus"><i class="fa fa-linkedin"></i>LinkedIn</a>
 </span>
 <!-- /.social-share -->
