--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,9 +44,9 @@
       <div class="entry-content">
         {{ content }}
         <!-- {% if site.owner.disqus-shortname and page.comments or site.comments %}
-          <div id="disqus_thread"></div><!-- /#disqus_thread -->
+          <div id="disqus_thread"></div> /#disqus_thread -->
           <!-- {% include disqus-comments.html %} -->
-        <!-- {% endif %} --> -->
+        <!-- {% endif %} --> 
       </div><!-- /.entry-content -->
     </div><!-- /.entry-wrapper -->
     <nav class="pagination" role="navigation">
